--- a/aboly.html
+++ b/aboly.html
@@ -16,7 +16,7 @@ body {
     padding-top: 50px;
 }
 
-h1 {
+h1.lybodychapter {
     background-color: #d9edf7;
     border-radius: 0.4em;
     letter-spacing: 0.6em;
@@ -738,7 +738,7 @@ img.characterimg {
 <p>
 <a href="#zhouchao">战国</a>中期，机动灵活的骑射开始成为战车与步兵的强大补充。秦统一天下后，冲击力强但笨重难用的战车逐渐被淘汰。明清起各种火器的应用，又使骑兵走向没落。</p>
 <p>
-<a id="bingyi"></a>按<a href="#zhouchao">周</a>制，百姓中每576家（64 <a href="#jingtianzhi">井</a>）负责配齐一乘兵车及所有人员装备。<span class="lyterm">千乘之国</span>就是用兵力来衡量国力的强弱。<a id="qianli"></a><a href="#tianzi">天子</a><a href="#wangji">畿</a>内地方千里（即纵隔各千里，<a id="li3b"></a>每300 <a href="#bu4">步</a>为1 <span class="lykeyword">里</span>，约合414米），出兵车万乘，<a href="#zhuhou">诸侯</a>地方50里至数百里，出兵车千乘，<a id="fuyong"></a>不足50里者则为附庸，因此天子也称&ldquo;万乘之尊&rdquo;。但东周时王室衰微，诸侯间征伐兼并，制度常为<a href="#juwen">具文</a>。《战国策》刘向书录称，战国末期<span class="lyq">万乘之国七、千乘之国五</span>，在七雄纷争的舞台上，<a href="#xizhouguo">西周国</a>、东周国仅余千乘自保了。</p>
+<a id="bingyi"></a>按<a href="#zhouchao">周</a>制，百姓中每576家（64 <a href="#jingtianzhi">井</a>）负责配齐一乘兵车及所有人员装备。<span class="lyterm">千乘之国</span>就是用兵力来衡量国力的强弱。<a id="qianli"></a><a href="#tianzi">天子</a><a href="#wangji">畿</a>内<a href="#fang1a">地方</a>千里（即纵隔各千里，<a id="li3b"></a>每300 <a href="#bu4">步</a>为1 <span class="lykeyword">里</span>，约合414米），出兵车万乘，<a href="#zhuhou">诸侯</a>地方50里至数百里，出兵车千乘，<a id="fuyong"></a>不足50里者则为附庸，因此天子也称&ldquo;万乘之尊&rdquo;。但东周时王室衰微，诸侯间征伐兼并，制度常为<a href="#juwen">具文</a>。《战国策》刘向书录称，战国末期<span class="lyq">万乘之国七、千乘之国五</span>，在七雄纷争的舞台上，<a href="#xizhouguo">西周国</a>、东周国仅余千乘自保了。</p>
 <div class="lyseealso">
 <p>
 <span>【参】</span><span>中国历史上，最高统治者的称号是不固定的。</span>
@@ -3152,7 +3152,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<a id="yiyiguanzhi"></a><span class="lyterm">一以贯之</span>：一个基本道理贯通它的全部内容。古注常用钱绳串铜钱来打比方，用现代的话说，就是既有体系规模，又有中心思想。</p>
+<a id="yiyiguanzhi"></a><span class="lyterm">一以贯之</span>：&ldquo;以一贯之&rdquo;的倒装，一个基本道理贯通它的全部内容。古注常用钱绳串铜钱来打比方，用现代的话说，就是既有体系规模，又有中心思想。</p>
 </li>
 <li>
 <p>
@@ -3190,9 +3190,9 @@ img.characterimg {
 <p>
 <span class="lyterm">喻</span>：明白（道理），了解（情况）。<span class="lyexample"><span>【例】</span><span>成语&ldquo;不言而喻&rdquo;、&ldquo;家喻户晓&rdquo;。</span></span>
 </p>
-<p>其本义为告知、开导（人）。<a id="xiao3"></a>&ldquo;晓&rdquo;也有这两种意思。<span class="lyexample"><span>【例】</span><span>成语&ldquo;不可理喻&rdquo;、&ldquo;晓以利害&rdquo;。</span></span>
+<p>其本义为告知、开导（人），前面相当于它的被动用法。<a id="xiao3"></a>&ldquo;晓&rdquo;也有这两种意思。<span class="lyexample"><span>【例】</span><span>成语&ldquo;不可理喻&rdquo;、&ldquo;晓以利害&rdquo;。</span></span>
 </p>
-<p>这不是说君子并不求利，而是先后轻重的次序与小人相反。<span class="lyseealso"><span>【参】</span><span><a href="#4.5" class="lyref">4.5</a> </span></span>
+<p>这句话不是说君子并不求利，而是先后轻重的次序与小人相反。<span class="lyseealso"><span>【参】</span><span><a href="#4.5" class="lyref">4.5</a> </span></span>
 </p>
 </li>
 </ul>
@@ -5031,6 +5031,11 @@ img.characterimg {
 </div>
 <div class="lyblobannotation">
 <ul class="lyblobitemize">
+<li>
+<p>
+<span class="lyterm">讲</span>：研究，修习。<span class="lyexample"><span>【例】</span><span>传统评书演义中，常出现英雄相聚&ldquo;讲文演武&rdquo;的场景。（演：练。）</span></span>
+</p>
+</li>
 <li>
 <p>
 <a id="xi3"></a><span class="lyterm">徙</span>（<span class="lypinyin">xǐ</span>）：本义为迁移，移居，move，引申为改变，这里指转变思想，接受教化，convert。<span class="lyseealso"><span>【参】</span><span><a href="#6.12" class="lyref">6.12</a> </span></span>
@@ -7193,7 +7198,7 @@ img.characterimg {
 </li>
 </ul>
 <p>
-<span class="lyseealso"><span>【参】</span><span>本章肯定了独立人格的尊严。即使是小人物，<span class="lyq">富贵不能淫，贫贱不能移，威武不能屈，此之谓大丈夫</span>。（《孟子&middot;滕文公下》。<a href="#yin2">淫</a>：侵犯，相当于 <a href="#12.6" class="lyref">12.6</a>  的&ldquo;浸润&rdquo;。）据汪东林《1949年后的梁漱溟》记载，1974年初兴起的&ldquo;批林批孔&rdquo;运动中，哲学家梁漱溟（1893&mdash;1988）拒绝随大流，反对全盘否定孔子，反对<span class="lyq">把学术研究和政治问题搅在一起</span>。他又在学习会上发表长篇讲话，认为孔子是中国历史上影响最大的古人，引起轩然大波，遭到半年多的集中批判。被追问挨批感想时，<span class="lyq">他始而不答，最后却脱口而出：&ldquo;三军可夺帅也，匹夫不可夺<a href="#zhi4g">志</a>！&rdquo;</span>要求他解释，回答说：<span class="lyq">我认为，孔子本身<a href="#7.21">不是宗教</a>，也<a href="#6.17">不要人信仰他</a>，他只是要人<a href="#7.28">相信自己的理性</a>。我只是相信自己的理性，而不轻易去相信别的什么。别的人可能对我有启发，但也还<a href="#12.1">只是启发</a>我的理性。归根结底，我还是按我的理性而言而动。因为一定要我说话，再三问我，我才说了&ldquo;三军可夺帅也，匹夫不可夺志&rdquo;的老话。吐露出来，是受压力的人说的话，不是在得势的人说的话。&ldquo;匹夫&rdquo;就是独人一个，无权无势。他的最后一着只是坚信他自己的&ldquo;志&rdquo;，什么都可以夺掉他，但就是这个&ldquo;志&rdquo;没法夺掉，就是把他这个人消灭掉，也无法夺掉！</span></span></span>
+<span class="lyseealso"><span>【参】</span><span>本章肯定了独立人格的尊严，志向决心的可贵。即使是小人物，<span class="lyq">富贵不能淫，贫贱不能移，威武不能屈，此之谓大丈夫</span>。（《孟子&middot;滕文公下》。<a href="#yin2">淫</a>：侵犯，相当于 <a href="#12.6" class="lyref">12.6</a>  的&ldquo;浸润&rdquo;。）据汪东林《1949年后的梁漱溟》记载，1974年初兴起的&ldquo;批林批孔&rdquo;运动中，哲学家梁漱溟（1893&mdash;1988）拒绝随大流，反对全盘否定孔子，反对<span class="lyq">把学术研究和政治问题搅在一起</span>。他又在学习会上发表长篇讲话，认为孔子是中国历史上影响最大的古人，引起轩然大波，遭到半年多的集中批判。被追问挨批感想时，<span class="lyq">他始而不答，最后却脱口而出：&ldquo;三军可夺帅也，匹夫不可夺<a href="#zhi4g">志</a>！&rdquo;</span>要求他解释，回答说：<span class="lyq">我认为，孔子本身<a href="#7.21">不是宗教</a>，也<a href="#6.17">不要人信仰他</a>，他只是要人<a href="#7.28">相信自己的理性</a>。我只是相信自己的理性，而不轻易去相信别的什么。别的人可能对我有启发，但也还<a href="#12.1">只是启发</a>我的理性。归根结底，我还是按我的理性而言而动。因为一定要我说话，再三问我，我才说了&ldquo;三军可夺帅也，匹夫不可夺志&rdquo;的老话。吐露出来，是受压力的人说的话，不是在得势的人说的话。&ldquo;匹夫&rdquo;就是独人一个，无权无势。他的最后一着只是坚信他自己的&ldquo;志&rdquo;，什么都可以夺掉他，但就是这个&ldquo;志&rdquo;没法夺掉，就是把他这个人消灭掉，也无法夺掉！</span></span></span>
 </p>
 </div>
 </div>
@@ -7558,7 +7563,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">以居</span>：指当坐垫。<span class="lyterm">居</span>：闲坐，这是其本义。</p>
+<span class="lyterm">以居</span>：指当坐垫。<a id="ju1a"></a><span class="lyterm">居</span>：闲坐，这是其本义。</p>
 </li>
 <li>
 <p>
@@ -8627,7 +8632,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">兼人</span>：一人抵多人，这里是指子路勇于进取，另也可以形容勇力过人。<span class="lyexample"><span>【例】</span><span>《汉书&middot;韩信传》：<span class="lyq">受辱于跨下，无兼人之勇，不足畏也。</span>（跨：通&ldquo;胯&rdquo;。）</span></span><span class="lyseealso"><span>【参】</span><span><a href="#5.14" class="lyref">5.14</a> <a href="#12.12" class="lyref">12.12</a> </span></span>
+<span class="lyterm">兼人</span>：一人抵多人，这里是指子路勇于进取，果敢好胜。另外也可以形容勇力过人。<span class="lyexample"><span>【例】</span><span>《汉书&middot;韩信传》：<span class="lyq">受辱于跨下，无兼人之勇，不足畏也。</span>（跨：通&ldquo;胯&rdquo;。）</span></span><span class="lyseealso"><span>【参】</span><span><a href="#5.14" class="lyref">5.14</a> <a href="#12.12" class="lyref">12.12</a> </span></span>
 </p>
 </li>
 </ul>
@@ -8746,11 +8751,11 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">毋吾以也</span>：不要因为我（而不畅所欲言）呀。具体的原因在前面说了：<span class="lyterm">吾一日长（<span class="lypinyin">zhǎng</span>）乎尔</span>。<span class="lyterm">一日</span>表示时间短，是轻松诙谐的说法。从4位弟子的排列顺序推测，曾皙的年龄小于子路而大于冉有。</p>
+<span class="lyterm">毋吾以也</span>：不要因为我（而不畅所欲言）呀。<span class="lyterm">以</span>：&ldquo;以为念&rdquo;的略语，即顾虑。具体的原因在前面说了：<span class="lyterm">吾一日长（<span class="lypinyin">zhǎng</span>）乎尔</span>。<span class="lyterm">一日</span>表示时间短，是轻松诙谐的说法。从4位弟子的排列顺序推测，曾皙的年龄小于子路而大于冉有。</p>
 </li>
 <li>
 <p>
-<span class="lyterm">居则曰&lsquo;不吾知也&rsquo;</span>：（你们）平时动不动就说&ldquo;没人赏识我啊&rdquo;。<a id="ju1"></a><span class="lyterm">居</span>指平日里，闲暇时。<span class="lyterm">则</span>表示时间上的承接。</p>
+<span class="lyterm">居则曰&lsquo;不吾知也&rsquo;</span>：（你们）平时动不动就说&ldquo;没人赏识我啊&rdquo;。<a id="ju1"></a><span class="lyterm"><a href="#ju1a">居</a></span>指平日里，闲暇时。<span class="lyterm">则</span>表示动作的承接关系。<span class="lyterm">何以</span>：指做什么，怎样表现。</p>
 </li>
 <li>
 <p>
@@ -8758,7 +8763,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm"><a href="#she4">摄</a></span>：夹持，挟制，两头受气。这可以从其本义&ldquo;持&rdquo;理解，也可以从&ldquo;镊&rdquo;理解。</p>
+<span class="lyterm"><a href="#she4">摄</a></span>：夹持，挟制，两头受气。这可以从其本义&ldquo;持&rdquo;理解，也可以借助&ldquo;镊&rdquo;理解。</p>
 </li>
 <li>
 <p>
@@ -8766,11 +8771,11 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">因</span>：继，接续，增加。比较与 <a href="#2.23" class="lyref">2.23</a>  中的差别。</p>
+<span class="lyterm">因</span>：继，接续，增加。可以比较它在 <a href="#2.23" class="lyref">2.23</a>  的含义。</p>
 </li>
 <li>
 <p>
-<span class="lyterm">饥馑</span>（<span class="lypinyin">jǐn</span>）：荒年，灾荒。<span class="lyterm">饥</span>：谷物歉收。<span class="lyterm">馑</span>：蔬菜歉收。</p>
+<span class="lyterm">饥馑</span>（<span class="lypinyin">jǐn</span>）：荒年，灾荒。<span class="lyterm">饥</span>：谷物歉收。<span class="lyterm">馑</span>：蔬菜歉收。这说的是国家面临重重危难，子路自信正是他的用武之地。</p>
 </li>
 <li>
 <p>
@@ -8778,7 +8783,8 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">方</span>：道理，道义。</p>
+<span class="lyterm">方</span>：道理，道义。<span class="lyexample"><span>【例】</span><span>成语&ldquo;贻笑大方&rdquo;。（贻：留给。大方：造诣高深者，行家。）</span></span>
+</p>
 </li>
 <li>
 <p>
@@ -8786,7 +8792,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">方六七十，如五六十</span>：指不起眼的<a href="#qianli">小国</a>。<span class="lyterm">方</span>：纵横的长度，这里的单位是<a href="#li3b">里</a>。<span class="lyterm">如</span>：表示选择的连词，或。<span class="lyexample"><span>【例】</span><span>《史记&middot;平原君虞卿列传》：<span class="lyq">予秦地如毋予，孰吉？</span></span></span>
+<span class="lyterm">方六七十，如五六十</span>：指不起眼的<a href="#qianli">小国</a>。<a id="fang1a"></a><span class="lyterm">方</span>：纵横的长度，这里的单位是<a href="#li3b">里</a>。<span class="lyterm">如</span>：表示选择的连词，或。<span class="lyexample"><span>【例】</span><span>《史记&middot;平原君虞卿列传》：<span class="lyq">予秦地如毋予，孰吉？</span></span></span>
 </p>
 </li>
 <li>
@@ -8795,7 +8801,10 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm"><a href="#zongmiao">宗庙</a>之事，如会同，端章甫</span>：祭祀宗庙的时候，或者各国盟会的时候，穿得衣帽整齐。两位国君约见叫<span class="lyterm">会</span>，多位相见叫<span class="lyterm">同</span>。<span class="lyterm">端</span>：一种黑色礼服，又称玄端。<span class="lyterm">章甫</span>：源自商朝的一种黑色礼帽。</p>
+<span class="lyterm"><a href="#zongmiao">宗庙</a>之事，如会同，端章甫</span>：祭祀宗庙的时候，或者各国国君会盟的时候，穿得衣冠整齐。</p>
+<p>据《周礼&middot;春官宗伯&middot;大宗伯》，<span class="lyterm">会</span>是天子在王都之外召集诸侯，以行征伐之事；<span class="lyterm">同</span>是天子多年不巡视天下，则诸侯同来王都探问。这里的<span class="lyterm">会同</span>泛指诸侯会见。</p>
+<p>
+<span class="lyterm">端</span>：一种黑色礼服，又称玄端。<span class="lyterm">章甫</span>：源自商朝的一种黑色礼帽。</p>
 </li>
 <li>
 <p>
@@ -8803,7 +8812,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">鼓瑟希，铿（<span class="lypinyin">kēng</span>）尔</span>：（曾皙）弹瑟的音节慢慢稀落，铿的一声戛然而止。<span class="lyterm">铿</span>：象声词，撞击金属发出的洪亮声音。</p>
+<span class="lyterm">鼓瑟希，铿（<span class="lypinyin">kēng</span>）尔</span>：（曾皙）弹瑟的音节慢慢稀落，铿的一声戛然而止。<span class="lyterm">铿</span>：象声词，金属撞击发出的洪亮声音。</p>
 </li>
 <li>
 <p>
@@ -8811,7 +8820,9 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">何伤乎？</span>：有什么妨碍呢？</p>
+<span class="lyterm">何伤乎？</span>：有什么妨碍呢？<span class="lyterm">伤</span>：产生不良影响，hurt。<span class="lyexample"><span>【例】</span><span>成语&ldquo;有伤风化&rdquo;。英语惯用语有It won't hurt to do sth.</span></span>
+</p>
+<p>假如孔子不是这样谦和善诱，就不会有后面那个温暖生动，洋溢着儒家理想的画面了。</p>
 </li>
 <li>
 <p>
@@ -8827,7 +8838,8 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="yong3"></a><span class="lyterm">咏</span>：长声吟唱。遥想一下，他们咏的内容会是什么？</p>
+<a id="yong3"></a><span class="lyterm">咏</span>：长声吟唱。不妨遥想一下，他们所咏的内容会是什么？<span class="lyseealso"><span>【参】</span><span><a href="#6.30" class="lyref">6.30</a> </span></span>
+</p>
 </li>
 <li>
 <p>
@@ -8835,7 +8847,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">非邦</span>：（说的）不是国家（治理方面的事）。</p>
+<span class="lyterm">非邦</span>：（说的）不是国家（治理方面的事）。孔子问的是&ldquo;如或知尔&rdquo;，诸弟子从子路往后，一个比一个回答得谦逊含蓄，所以曾皙想请老师指点确认一下。</p>
 </li>
 </ul>
 </div>
