--- a/ly.html
+++ b/ly.html
@@ -16,7 +16,7 @@ body {
     padding-top: 50px;
 }
 
-h1 {
+h1.lybodychapter {
     background-color: #d9edf7;
     border-radius: 0.4em;
     margin-top: 30px;
