--- a/aboly.html
+++ b/aboly.html
@@ -897,7 +897,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">固</span>：浅陋狭隘。<span class="lyexample"><span>【例】</span><span><a href="#7.36" class="lyref">7.36</a> <span class="lyq">奢则不孙，俭则固。</span></span></span>
+<a id="gu4"></a><span class="lyterm">固</span>：浅陋狭隘。<span class="lyexample"><span>【例】</span><span><a href="#7.36" class="lyref">7.36</a> <span class="lyq">奢则不孙，俭则固。</span></span></span>
 </p>
 </li>
 <li>
@@ -3537,12 +3537,12 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">吾斯之未能信</span>：&ldquo;<a href="#ozhiv">O之V</a>&rdquo;的倒装结构。<span class="lyterm">斯</span>指仕，<span class="lyterm">信</span>指有自信。</p>
+<a id="shi4a"></a><span class="lyterm">仕</span>：做官，从政。也可作名词，官职。<span class="lyexample"><span>【例】</span><span>《北史&middot;徐招传》：<span class="lyq">初入洛阳，虽未登仕，已为时知。</span>&ldquo;仕途&rdquo;即官位升迁之路。</span></span>
+</p>
 </li>
 <li>
 <p>
-<a id="shi4a"></a><span class="lyterm">仕</span>：做官，从政。也可作名词，官职。<span class="lyexample"><span>【例】</span><span>《北史&middot;徐招传》：<span class="lyq">初入洛阳，虽未登仕，已为时知。</span>&ldquo;仕途&rdquo;即官位升迁之路。</span></span>
-</p>
+<span class="lyterm">吾斯之未能信</span>：&ldquo;<a href="#ozhiv">O之V</a>&rdquo;的倒装结构。<span class="lyterm">斯</span>指仕，<span class="lyterm">信</span>指有自信。</p>
 </li>
 </ul>
 </div>
@@ -10954,7 +10954,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">微生亩</span>：估计是一位年长的隐士，有说就是<a href="#weishengao">微生高</a>。他直呼孔子之名，是倨傲责下的口气。</p>
+<span class="lyterm">微生亩</span>：估计是一位年长的隐士，因为他直呼孔子之名，是倨傲责下的口气。</p>
 </li>
 <li>
 <p>
@@ -10962,7 +10962,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm"><a href="#ji2">疾</a>固</span>：忧愤于（世间的）顽固不化。引申一点，将<span class="lyterm">固</span>理解为愚妄（无知而妄为），可能更贴合孔子语意。</p>
+<span class="lyterm"><a href="#ji2">疾</a><a href="#gu4">固</a></span>：忧愤于（世间的）顽固不化。稍引申一点，将<span class="lyterm">固</span>理解为愚妄（无知而妄为），可能更贴合孔子之意。</p>
 </li>
 </ul>
 </div>
@@ -10973,7 +10973,7 @@ img.characterimg {
 <a href="ly#14.33">14.33</a>
 </div>
 <div class="lybloboriginaltext">
-<p>曰：&ldquo;骥不称其力，称其德也。&rdquo;</p>
+<p>子曰：&ldquo;骥不称其力，称其德也。&rdquo;</p>
 </div>
 <div class="lyblobannotation">
 <ul class="lyblobitemize">
@@ -14735,7 +14735,7 @@ img.characterimg {
 <p>《论语》是传统文化的宝贵财富，一个时代应该有一个时代的《论语》读本。</p>
 <p>什么是传统文化？我想，它应该是让人发自内心感到熟悉亲切，感到温暖安乐的东西吧。一个国家的传统文化，是国民的精神港湾，闪耀着自古以来的共同理想。柳诒徵先生的《中国文化史》说：<span class="lyq">孔子者，中国文化之中心也。无孔子则无中国文化。</span>如果不先了解孔子，又怎能断定这句话的是与非呢？</p>
 <p>《论语》是写孔子最真实可靠的材料。孔子在古代被称为<a href="#sheng4">圣人</a>，他自己却觉得，连<a href="#junzi">君子</a>的标准都还<a href="#7.33">够不上</a>，兴致勃勃地做着<a href="#7.17">学习计划</a>呢。孔子的形象，有时被神化，有时又被虚化，容易让人敬而远之，这可不是他的错。稍微读读《论语》就会觉得，孔子没有那么高深莫测，是一位可敬又风趣的老人家。仔细想想还会明白，他的心灵离我们有多么近，尽管年代隔了那么远。</p>
-<p>《论语》是一本很小的书。我采用的<a href="#lunyuversion">版本</a>，原文分为20篇，共512章，15915字。如果按现代文的阅读速度，40分钟就能读完一遍。它的文字简练优美，只是有些难字需要解释，为了帮助理解，还要补充一些背景材料。它的涵义丰富深远，不太适合速读，应该反复玩味。这就是同时提供了注释版和<a href="#baiwenban">白文版</a>的原因。</p>
+<p>《论语》是一本很小的书。我采用的<a href="#lunyuversion">版本</a>，原文分为20篇，共512章，15916字。如果按现代文的阅读速度，40分钟就能读完一遍。它的文字简练优美，只是有些难字需要解释，为了帮助理解，还要补充一些背景材料。它的涵义丰富深远，不太适合速读，应该反复玩味。这就是同时提供了注释版和<a href="#baiwenban">白文版</a>的原因。</p>
 <p>《论语》的注本已经数不胜数，我又不是文科专业，为什么要另搞一套呢？</p>
 <p>我非常喜欢《论语》。我常想，假如《论语》能说话，一定很羡慕&ldquo;人家&rdquo;《圣经》有那么多的优质资源，从网站到电子书，内容精良，还可以免费使用。语录体的《论语》，难道不是碎片时间看上几眼，反复揣摩的绝好选择？</p>
 <p>我见过的注本中，古代的作品有的简洁有的细密，但现代人读起来难免艰涩。现代的作品，有的只解释字词而缺乏感想，比较沉闷，有的回护古人较多，略显执拗，有的刻意回避了传统的观点，缚手缚脚，也有的发挥较远，并不耐读。而且一旦出版，大小瑕疵无法随时修正，新材料新成果难以及时补充，让认真的作者和读者都很苦恼。</p>
