--- a/ly.html
+++ b/ly.html
@@ -3910,7 +3910,7 @@ a:link {
 <a href="aboly#14.33">14.33</a>
 </div>
 <div class="lytext">
-<p>曰：&ldquo;骥不称其力，称其德也。&rdquo;</p>
+<p>子曰：&ldquo;骥不称其力，称其德也。&rdquo;</p>
 </div>
 </div>
 <a id="14.34"></a>
