--- a/aboly.html
+++ b/aboly.html
@@ -1775,7 +1775,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">举直错诸枉</span>：把正直君子安排在比邪曲小人高的职位上。<a id="ju3"></a><span class="lyterm">举</span>：选用，推荐。<a id="cuo4"></a><span class="lyterm">错</span>：通&ldquo;措&rdquo;，放置，安放。<span class="lyterm">枉</span>：弯曲，不直。<span class="lyseealso"><span>【参】</span><span>《韩诗外传》第4卷第4章强调了小人在位的危害：<span class="lyq">《周书》曰：&ldquo;无为虎傅翼，将飞入<a href="#yi4c">邑</a>，择人而食。&rdquo;夫置不肖之人于位，是为虎傅翼也，不亦<a href="#dai4">殆</a>乎？</span>（<a id="fu4a"></a>傅：附，加。）</span></span>
+<span class="lyterm">举直错诸枉</span>：把正直君子安排在比邪曲小人高的职位上。<a id="ju3"></a><span class="lyterm">举</span>：选用，推荐。<a id="cuo4"></a><span class="lyterm">错</span>：通&ldquo;措&rdquo;，放置，安放。<span class="lyterm">枉</span>：弯曲，不直。<span class="lyexample"><span>【例】</span><span><a href="#18.2" class="lyref">18.2</a> <span class="lyq">枉道而事人，何必去父母之邦？</span></span></span><span class="lyseealso"><span>【参】</span><span>《韩诗外传》第4卷第4章强调了小人在位的危害：<span class="lyq">《周书》曰：&ldquo;无为虎傅翼，将飞入<a href="#yi4c">邑</a>，择人而食。&rdquo;夫置不肖之人于位，是为虎傅翼也，不亦<a href="#dai4">殆</a>乎？</span>（<a id="fu4a"></a>傅：附，加。）</span></span>
 </p>
 </li>
 </ul>
@@ -13445,6 +13445,10 @@ img.characterimg {
 <p>（渎：通&ldquo;黩&rdquo;，贪求。<a id="youyou"></a>油油：通&ldquo;悠悠&rdquo;，第一个指广大众多，与 <a href="#18.6" class="lyref">18.6</a>  的<a href="#taotao">滔滔</a>意蕴相近，第二个指心态安适。裸裎（<span class="lypinyin">ch&eacute;ng</span>）：裸体。<a id="lei3"></a>诔（<span class="lypinyin">lěi</span>）：累述死者功德、致哀并定谥号，通常为上对下；这里是家人、弟子之诔，为私谥。<a id="kaiti"></a>恺（<span class="lypinyin">kǎi</span>）悌：和乐平易。厉：通&ldquo;励&rdquo;。下世：去世。遐年：长寿。窜：改。）</p>
 </div>
 </li>
+<li>
+<p>
+<span class="lyterm">父母之邦</span>：祖国，故土。英语也说fatherland、motherland，与此相通。</p>
+</li>
 </ul>
 </div>
 </div>
@@ -13460,7 +13464,7 @@ img.characterimg {
 <div class="lyblobannotation">
 <ul class="lyblobitemize">
 <li>
-<p> 前面的<span class="lyterm">待孔子曰</span>，像是与大臣商议将给孔子的待遇。后面的<span class="lyterm">曰</span>，像是过了一段时间之后，重新自我认识的话。</p>
+<p> 前面的<span class="lyterm">待孔子曰</span>，也许是和大臣们商议给孔子的待遇。后面的<span class="lyterm">曰</span>，也许是过了一段时间之后，重新自我认识的话。</p>
 </li>
 <li>
 <p>
@@ -13503,7 +13507,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<a id="jieyu"></a><span class="lyterm">楚狂接舆</span>：楚国一位佯狂避世的隐士，因为不知道他的真名，所以根据他走近过孔子的车乘这件事，给他取了<span class="lyterm">接舆</span>的代名。</p>
+<a id="jieyu"></a><span class="lyterm">楚狂接舆</span>：楚国一位佯狂避世的隐士，因为不知道他的真名，所以根据他走近过孔子的车乘这件事，给他取了<span class="lyterm">接舆</span>的代称。</p>
 </li>
 <li>
 <p>
@@ -13511,7 +13515,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">追</span>：补救，指用今后的恰当行为弥补过去犯下的错误。</p>
+<span class="lyterm">追</span>：补救，指用今后的正确行为弥补过去的谬误。</p>
 </li>
 <li>
 <p>
@@ -13535,7 +13539,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<a id="changjujieni"></a><span class="lyterm">长沮（<span class="lypinyin">j&ugrave;</span>）、桀（<span class="lypinyin">ji&eacute;</span>）溺</span>：两位姓名不详的隐士，因为他们个子高大、正满身泥水在田里干活，所以给他们起了这两个代名。当时的场景应该是孔子乘车来到大河边上，希望找渡船过河，看到了在旁边耕作的这两位隐士。<span class="lyterm">沮</span>：潮湿。<span class="lyterm">桀</span>：通&ldquo;杰&rdquo;，高大。<span class="lyterm">溺</span>：陷于水中。</p>
+<a id="changjujieni"></a><span class="lyterm">长沮（<span class="lypinyin">j&ugrave;</span>）、桀（<span class="lypinyin">ji&eacute;</span>）溺</span>：两位姓名不详的隐士，因为他们个子高大、正满身泥水在田里干活，所以给他们起了这两个代称。当时的场景应该是孔子乘车来到大河边上，希望找渡船过河，看到了在旁边耕作的这两位隐士。<span class="lyterm">沮</span>：潮湿。<span class="lyterm">桀</span>：通&ldquo;杰&rdquo;，高大。<span class="lyterm">溺</span>：陷于水中。</p>
 </li>
 <li>
 <p>
@@ -13637,7 +13641,7 @@ img.characterimg {
 </li>
 </ul>
 <p>
-<span class="lyseealso"><span>【参】</span><span>《困学纪闻》认为，<a href="#changjujieni">长沮、桀溺</a>与荷蓧丈人的言行，虽未合乎<a href="#zhongyong">中庸</a>之道，但也只有孔子这样的圣人有资格评议：<span class="lyq">斯人清风远韵，如鸾鹄之高翔、玉雪之不污，视世俗徇利亡耻、饕荣苟得者，犹腐鼠粪壤也。小人无忌惮，自以为中庸，而逸民清士乃在讥评之列，学者其审诸！</span>（鸾（<span class="lypinyin">lu&aacute;n</span>）：凤凰一类的五彩神鸟。鹄（<span class="lypinyin">h&uacute;</span>）：天鹅。徇（<span class="lypinyin">x&ugrave;n</span>）：谋求。饕（<span class="lypinyin">tāo</span>）：极贪。腐鼠、粪壤：比喻污秽低贱之物，出自《庄子&middot;秋水》、《楚辞&middot;离骚》。）</span></span>
+<span class="lyseealso"><span>【参】</span><span>《困学纪闻》认为，<a href="#changjujieni">长沮、桀溺</a>与荷蓧丈人的言行，虽未合乎<a href="#zhongyong">中庸</a>之道，但也只有孔子这样的圣人有资格评议：<span class="lyq">斯人清风远韵，如鸾鹄之高翔、玉雪之不污，视世俗徇利亡耻、饕荣苟得者，犹腐鼠粪壤也。小人无忌惮，自以为中庸，而<a href="#yimina">逸民</a>清士乃在讥评之列，学者其审诸！</span>（鸾（<span class="lypinyin">lu&aacute;n</span>）：凤凰一类的五彩神鸟。鹄（<span class="lypinyin">h&uacute;</span>）：天鹅。徇（<span class="lypinyin">x&ugrave;n</span>）：谋求。饕（<span class="lypinyin">tāo</span>）：极贪。腐鼠、粪壤：比喻污秽低贱之物，出自《庄子&middot;秋水》、《楚辞&middot;离骚》。）</span></span>
 </p>
 </div>
 </div>
@@ -14582,7 +14586,7 @@ img.characterimg {
 <p>
 <a id="boniu"></a><span class="lycharname">伯牛</span>，<span class="lycharname">冉伯牛</span>：冉耕，字伯牛，鲁国人，少孔子7岁，<a href="#11.3">孔门十哲</a>之一，患病早逝。 <a href="#6.10" class="lyref">6.10</a> <a href="#11.3" class="lyref">11.3</a> </p>
 <p>
-<a id="fanxu"></a><span class="lycharname">樊须</span>，<span class="lycharname">樊迟</span>：樊须，字子迟，鲁国人，少孔子46岁。在前484年春的<a href="#jiquzhizhan">稷曲之战</a>中，<a href="#ranqiu">冉求</a>统领鲁国左路军，樊迟担任他的车右武士，建议冉求反复申明号令再冲锋，果然士气大振，赢得了胜利。他是孔子晚年返鲁后收取的学生。 <a href="#2.5" class="lyref">2.5</a> <a href="#6.22" class="lyref">6.22</a> <a href="#12.21" class="lyref">12.21</a> <a href="#12.22" class="lyref">12.22</a> <a href="#13.4" class="lyref">13.4</a> <a href="#13.19" class="lyref">13.19</a> </p>
+<a id="fanxu"></a><span class="lycharname">樊须</span>，<span class="lycharname">樊迟</span>：樊须，字子迟，鲁国人，少孔子46岁，是孔子晚年返鲁后收取的学生。在前484年春的<a href="#jiquzhizhan">稷曲之战</a>中，<a href="#ranqiu">冉求</a>统领鲁国左路军，樊迟担任他的车右武士，建议冉求反复申明号令再冲锋，果然士气大振，赢得了胜利。 <a href="#2.5" class="lyref">2.5</a> <a href="#6.22" class="lyref">6.22</a> <a href="#12.21" class="lyref">12.21</a> <a href="#12.22" class="lyref">12.22</a> <a href="#13.4" class="lyref">13.4</a> <a href="#13.19" class="lyref">13.19</a> </p>
 <p>
 <a id="gongboliao"></a><span class="lycharname">公伯寮</span>（<span class="lypinyin">li&aacute;o</span>）：字子周，鲁国人。也有根据 <a href="#14.36" class="lyref">14.36</a>  认为他并非孔子弟子。 <a href="#14.36" class="lyref">14.36</a> </p>
 <p>
@@ -14604,15 +14608,15 @@ img.characterimg {
 <p>
 <a id="simaniu"></a><span class="lycharname">司马牛</span>：司马耕，向氏，字子牛，宋国人，是<a href="#huantui">桓魋</a>的弟弟，因为桓魋任宋国司马，故又以司马为氏。《仲尼弟子列传》说他<span class="lyq">多言而躁</span>，可能是根据 <a href="#12.3" class="lyref">12.3</a>  的推想。桓魋叛乱失败后，司马牛退还宋国的封地，辗转于齐、吴、宋，最终死在鲁国城外。 <a href="#12.3" class="lyref">12.3</a> <a href="#12.4" class="lyref">12.4</a> <a href="#12.5" class="lyref">12.5</a> </p>
 <p>
-<a id="tantaimieming"></a><span class="lycharname">澹（<span class="lypinyin">t&aacute;n</span>）台灭明</span>：字子羽，鲁国<a href="#wucheng">武城</a>人，少孔子39岁。《仲尼弟子列传》说他相貌丑陋，曾被孔子认为资质低劣。他退而修行，南游至楚，有弟子三百，讲究<a href="#4.5">取予</a><a href="#qujiu">去就</a>，名动诸侯。<span class="lyq">孔子闻之曰：&ldquo;吾以言取人，失之<a href="#zaiyu">宰予</a>；以貌取人，失之子羽。&rdquo;</span>《孔子家语&middot;弟子行》中，<a href="#zigong">子贡</a>形容他<span class="lyq">贵之不喜，贱之不怒，苟利于民矣，廉于行己。</span>今江苏省苏州市吴中区的澹台湖，据说就是他曾居住之地。 <a href="#6.14" class="lyref">6.14</a> </p>
+<a id="tantaimieming"></a><span class="lycharname">澹（<span class="lypinyin">t&aacute;n</span>）台灭明</span>：字子羽，鲁国<a href="#wucheng">武城</a>人，少孔子39岁。《仲尼弟子列传》说他相貌丑陋，曾被孔子认为资质低劣。他退而修行，南游至楚，有弟子三百，讲究<a href="#4.5">取予</a><a href="#qujiu">去就</a>，名动诸侯。<span class="lyq">孔子闻之曰：&ldquo;吾以言取人，失之<a href="#zaiyu">宰予</a>；以貌取人，失之子羽。&rdquo;</span>《孔子家语&middot;弟子行》中，<a href="#zigong">子贡</a>形容他<span class="lyq">贵之不喜，贱之不怒，苟利于民矣，廉于行己。</span>今江苏省苏州市吴中区的澹台湖，据说是他曾居之地。 <a href="#6.14" class="lyref">6.14</a> </p>
 <p>
-<a id="wumaqi"></a><span class="lycharname">巫马期</span>：巫马施，字子期，陈国人，少孔子30岁。《吕氏春秋&middot;开春论&middot;察贤》说他也曾任<a href="#shanfu">单父</a>宰，并比较了他与<a href="#zijian">子贱</a>之政的区别：<span class="lyq">宓子贱治单父，弹鸣琴，身不下堂，而单父治。巫马期以星出，以星入，日夜不居，以身亲之，而单父亦治。巫马期问其故于宓子，宓子曰：&ldquo;我之谓任人，子之谓任力。任力者故劳，任人者故逸。&rdquo;宓子则君子矣。&hellip;&hellip;巫马期则不然，弊生事精，劳手足，烦教诏，虽治，犹未<a href="#zhi4e">至</a>也。</span>（事：使，用。） <a href="#7.31" class="lyref">7.31</a> </p>
+<a id="wumaqi"></a><span class="lycharname">巫马期</span>：巫马施，字子期，陈国人，少孔子30岁。《吕氏春秋&middot;开春论&middot;察贤》说他也曾任<a href="#shanfu">单父</a>宰，并比较了他与<a href="#zijian">子贱</a>之政的区别：<span class="lyq">宓子贱治单父，弹鸣琴，身不下堂，而单父治。巫马期以星出，以星入，日夜不居，以身亲之，而单父亦治。巫马期问其故于宓子，宓子曰：&ldquo;我之谓任人，子之谓任力。任力者故劳，任人者故逸。&rdquo;宓子则君子矣。&hellip;&hellip;巫马期则不然，弊生事精，劳手足，烦教诏，虽治，犹未<a href="#zhi4e">至</a>也。</span>（以星出，以星入：相当于说披星带月早出晚归。事：使，用。） <a href="#7.31" class="lyref">7.31</a> </p>
 <p>
 <a id="yanhui"></a><span class="lycharname">颜回</span>，<span class="lycharname">颜渊</span>，<span class="lycharname">回</span>：颜回（前521年&mdash;前481年），字子渊，鲁国人，少孔子30岁，<a href="#11.3">孔门十哲</a>之一。他尊师好学，乐仁守礼，最得孔子推重期许，也受到同门的一致敬佩。可惜天不假年，29岁就熬白了头，41岁赍志而殁（早于孔子2年），未能传承光大师学，令孔子伤痛欲绝。《仲尼弟子列传》载，<span class="lyq">孔子<a href="#11.10">哭之恸</a>，曰：&ldquo;自吾有回，门人益亲。&rdquo;</span>后世尊其为孔门众贤之首，封为<span class="lykeyword">复圣</span>。颜回在古籍中常以孔子代言人的形象出现。唐代名臣、书法家颜真卿是他的40世孙。 <a href="#2.9" class="lyref">2.9</a> <a href="#5.9" class="lyref">5.9</a> <a href="#5.26" class="lyref">5.26</a> <a href="#6.3" class="lyref">6.3</a> <a href="#6.7" class="lyref">6.7</a> <a href="#6.11" class="lyref">6.11</a> <a href="#7.11" class="lyref">7.11</a> <a href="#9.11" class="lyref">9.11</a> <a href="#9.20" class="lyref">9.20</a> <a href="#9.21" class="lyref">9.21</a> <a href="#11.3" class="lyref">11.3</a> <a href="#11.4" class="lyref">11.4</a> <a href="#11.7" class="lyref">11.7</a> <a href="#11.8" class="lyref">11.8</a> <a href="#11.9" class="lyref">11.9</a> <a href="#11.10" class="lyref">11.10</a> <a href="#11.11" class="lyref">11.11</a> <a href="#11.19" class="lyref">11.19</a> <a href="#11.23" class="lyref">11.23</a> <a href="#12.1" class="lyref">12.1</a> <a href="#15.11" class="lyref">15.11</a> </p>
 <p>
 <a id="yanlu"></a><span class="lycharname">颜路</span>：颜无繇（<span class="lypinyin">y&oacute;u</span>），字路，鲁国人，<a href="#yanhui">颜回</a>之父，少孔子6岁，是孔子的早期弟子。 <a href="#11.8" class="lyref">11.8</a> </p>
 <p>
-<a id="yong"></a><span class="lycharname">雍</span>，<span class="lycharname">仲弓</span>：冉雍，字仲弓，鲁国人，少孔子29岁，<a href="#11.3">孔门十哲</a>之一。《孔子家语&middot;弟子行》中，<a href="#zigong">子贡</a>形容他<span class="lyq">在贫如客，使其臣如借，不<a href="#qiannu">迁怒</a>，不深怨，不录旧罪。</span>（如客：形容庄重自持，不因贫降志。如借：形容谨慎有礼，不自居其位。录：记住。）如果《荀子》提到的&ldquo;子弓&rdquo;就是冉雍（例同仲由字子路，又称季路），那么他在当时很受尊崇，与孔子并列，被称为<span class="lyq">大儒</span>、<span class="lyq">圣人之不得势者</span>。 <a href="#5.5" class="lyref">5.5</a> <a href="#6.1" class="lyref">6.1</a> <a href="#6.2" class="lyref">6.2</a> <a href="#6.6" class="lyref">6.6</a> <a href="#11.3" class="lyref">11.3</a> <a href="#12.2" class="lyref">12.2</a> <a href="#13.2" class="lyref">13.2</a> </p>
+<a id="yong"></a><span class="lycharname">雍</span>，<span class="lycharname">仲弓</span>：冉雍，字仲弓，鲁国人，少孔子29岁，<a href="#11.3">孔门十哲</a>之一。《孔子家语&middot;弟子行》中，<a href="#zigong">子贡</a>形容他<span class="lyq">在贫如客，使其臣如借，不<a href="#qiannu">迁怒</a>，不深怨，不录旧罪。</span>（如客：形容庄重自持，不因贫降志。如借：形容谨慎有礼，不自居其位。录：记住。）如果《荀子》屡次提到的&ldquo;子弓&rdquo;就是冉雍（例同仲由字子路，又称季路。王先谦《荀子集解》认为：<span class="lyq">曰季曰仲，至五十而加以伯仲也</span>），那么他在当时很受尊崇，与孔子并列，被称为<span class="lyq">大儒</span>、<span class="lyq">圣人之不得势者</span>。 <a href="#5.5" class="lyref">5.5</a> <a href="#6.1" class="lyref">6.1</a> <a href="#6.2" class="lyref">6.2</a> <a href="#6.6" class="lyref">6.6</a> <a href="#11.3" class="lyref">11.3</a> <a href="#12.2" class="lyref">12.2</a> <a href="#13.2" class="lyref">13.2</a> </p>
 <p>
 <a id="youruo"></a><span class="lycharname">有若</span>，<span class="lycharname">有子</span>：字子有，鲁国人，少孔子33岁，《孔子家语&middot;七十二弟子解》称他强识好古。《孟子&middot;滕文公上》、《仲尼弟子列传》载，孔子去世后，众弟子思慕不已，因为有若的气质见识与孔子相似，<a href="#zixia">子夏</a>、<a href="#ziyou">子游</a>、<a href="#zizhang">子张</a>等就奉他为师，但有若之才德不足以服众，这种偶像崇拜很快被放弃了。《礼记&middot;檀弓下》载，<a href="#aigong">鲁哀公</a>曾向他问礼，他去世后，继任的鲁悼公（前467年&mdash;前437年在位）亲自前来吊唁。他在《论语》中出现的4次，都是传道授业的口吻，除 <a href="#12.9" class="lyref">12.9</a>  外，称谓都是有子，待遇仅次于<a href="#zengshen">曾参</a>。 <a href="#1.2" class="lyref">1.2</a> <a href="#1.12" class="lyref">1.12</a> <a href="#1.13" class="lyref">1.13</a> <a href="#12.9" class="lyref">12.9</a> </p>
 <p>
@@ -14620,14 +14624,14 @@ img.characterimg {
 <p>
 <a id="zaiyu"></a><span class="lycharname">宰予</span>，<span class="lycharname">宰我</span>，<span class="lycharname">予</span>：字子我，鲁国人，少孔子29岁，<a href="#11.3">孔门十哲</a>之一。他口才出众，甚至超过大名鼎鼎的外交家<a href="#zigong">子贡</a>；思维活跃，不仅<a href="#17.21">质疑</a>过三年丧期的必要，还怀疑过黄帝的传说，向孔子追问<a href="#wudi">五帝</a>的由来（《大戴礼记&middot;五帝德》）。可孔子是反感伶牙俐齿的，也不太欣赏出格的想法和行为，《论语》中宰予总是受到敲打。《孟子&middot;公孙丑上》引用他对孔子的评价：<span class="lyq">以予观于夫子，贤于<a href="#yao">尧</a>、<a href="#shun">舜</a>远矣</span>，认为他和<a href="#zigong">子贡</a>、<a href="#youruo">有若</a>一样<span class="lyq">智足以知圣人</span>。 <a href="#3.21" class="lyref">3.21</a> <a href="#5.10" class="lyref">5.10</a> <a href="#6.26" class="lyref">6.26</a> <a href="#11.3" class="lyref">11.3</a> <a href="#17.21" class="lyref">17.21</a> </p>
 <p>
-<a id="zengxi"></a><span class="lycharname">曾皙</span>（<span class="lypinyin">xī</span>），<span class="lycharname">点</span>：曾点，字皙，<a href="#zengshen">曾参</a>之父，鲁国<a href="#wucheng">南武城</a>人。《孟子&middot;尽心下》说，他属于孔子眼中的<a href="#kuangjuan">狂士</a>。他教子严厉，有一次曾参在瓜田里除草，不小心斩到瓜根，他勃然大怒，操起大棒抡在儿子背上。曾参倒地昏厥良久，醒来后连忙好声好气跟父亲陪不是，还问有没有用力过猛伤到身体。事后，孔子批评曾参之孝<a href="#11.16">过犹不及</a>：<span class="lyq">（<a href="#shun">舜</a>事父）小棰则待过，大杖则逃走。&hellip;&hellip;今参事父，委身以待暴怒，殪而不避，既身死而陷父于不义，其不孝孰大焉？</span>（棰（<span class="lypinyin">chu&iacute;</span>）：棍棒，用作动词。待过：等着接受责罚。殪（<span class="lypinyin">y&igrave;</span>）：死。）事见《孔子家语&middot;六本》、《吕氏春秋&middot;孟夏纪&middot;劝学》。后人不辨因果，附会出&ldquo;棍棒底下出孝子&rdquo;的俗语。 <a href="#11.26" class="lyref">11.26</a> </p>
+<a id="zengxi"></a><span class="lycharname">曾皙</span>（<span class="lypinyin">xī</span>），<span class="lycharname">点</span>：曾点，字皙，<a href="#zengshen">曾参</a>之父，鲁国<a href="#wucheng">南武城</a>人。《孟子&middot;尽心下》说，他属于孔子眼中的<a href="#kuangjuan">狂士</a>。他教子严厉，有一次曾参在瓜田里除草，不小心斩到瓜根，他勃然大怒，操起大棒抡在儿子背上。曾参倒地昏厥良久，醒来后连忙好声好气跟父亲陪不是，还问有没有用力过猛伤到身体。事后，孔子批评曾参之孝<a href="#11.16">过犹不及</a>：<span class="lyq">〔<a href="#shun">舜</a>事父〕小棰则待过，大杖则逃走。&hellip;&hellip;今参事父，委身以待暴怒，殪而不避，既身死而陷父于不义，其不孝孰大焉？</span>（棰（<span class="lypinyin">chu&iacute;</span>）：棍棒，用作动词。待过：等着接受责罚。殪（<span class="lypinyin">y&igrave;</span>）：死。）事见《孔子家语&middot;六本》、《吕氏春秋&middot;孟夏纪&middot;劝学》。后人不辨因果，附会出&ldquo;棍棒底下出孝子&rdquo;的俗语。 <a href="#11.26" class="lyref">11.26</a> </p>
 <p>
 <a id="zengshen"></a><span class="lycharname">曾子</span>，<span class="lycharname">参</span>（传统读<span class="lypinyin">shēn</span>，也有根据其<a href="#chenghu">字</a>，认为应读<span class="lypinyin">cān</span>，即同&ldquo;骖&rdquo;）：曾参（前505年&mdash;前435年），字子<a href="#yu2b">舆</a>，鲁国<a href="#wucheng">南武城</a>人，少孔子46岁。他是孔子之学的主要<a href="#zisi">传承者</a>，后被封为<span class="lykeyword">宗圣</span>。曾参事父母至孝，是《二十四孝》第3个故事&ldquo;啮指心痛&rdquo;的主角。<a id="xiaojing"></a>儒家十三经之一的《孝经》，就采用他与孔子问答孝道的形式，共18章，约1800字，各章多引《诗经》作为总结。曾参笃于礼义，《礼记&middot;檀弓上》载，他病重卧床的那晚，听侍童说自己睡的是<a href="#qingdafushi">大夫</a>之席（曾参为<a href="#qingdafushi">士</a>），便挣扎着起身要求换席。两个儿子劝他等到天亮再换，他对儿子说：<span class="lyq">尔之爱我也不如彼。君子之爱人也以德，细人之爱人也以姑息。吾何求哉？吾得正而毙焉，斯已矣。</span>（彼：指侍童。细人：见识短浅的人。姑息：苟安。）换席后还没躺稳当，他就去世了。《大戴礼记》卷四、五共10篇，是他的语录，朱熹称他是《大学》的作者，但并没有给出根据。</p>
 <p>除了孔子的话以外，《论语》中对他所有的称谓都是曾子。其他弟子虽也有以<a href="#zi3">子</a>相称的，包括<a href="#youruo">有若</a>、<a href="#ranqiu">冉求</a>和<a href="#minziqian">闵子骞</a>，但都没有这样的待遇。后世多认为曾参和有若的弟子是编订《论语》的主力。 <a href="#1.4" class="lyref">1.4</a> <a href="#1.9" class="lyref">1.9</a> <a href="#4.15" class="lyref">4.15</a> <a href="#8.3" class="lyref">8.3</a> <a href="#8.4" class="lyref">8.4</a> <a href="#8.5" class="lyref">8.5</a> <a href="#8.6" class="lyref">8.6</a> <a href="#8.7" class="lyref">8.7</a> <a href="#11.18" class="lyref">11.18</a> <a href="#12.24" class="lyref">12.24</a> <a href="#14.26" class="lyref">14.26</a> <a href="#19.16" class="lyref">19.16</a> <a href="#19.17" class="lyref">19.17</a> <a href="#19.18" class="lyref">19.18</a> <a href="#19.19" class="lyref">19.19</a> </p>
 <p>
 <a id="zigao"></a><span class="lycharname">子羔</span>，<span class="lycharname">柴</span>：高柴，字子羔，少孔子30岁，<a href="#kangshu">卫国</a>人，曾任卫国<a href="#shishi">士师</a>。《孔子家语&middot;七十二弟子解》说他<span class="lyq">长不过<a href="#chi3">六尺</a>，状貌甚恶；为人笃孝而有法正。</span>《礼记&middot;檀弓上》记载他<span class="lyq">执亲之丧也，泣血三年，未尝见齿，君子以为难。</span>（见齿：笑。）《孔子家语&middot;致思》载，他在<a href="#kuaikuizhiluan">蒯聩之乱</a>出逃时，有位曾被他处以断足之刑的守门人连续3次为他指路，并坦言自己受刑罪有应得，对子羔是心悦诚服。孔子得知后赞许道：<span class="lyq">善哉为吏！其用法一也。思仁恕则树德，加严暴则树怨。公以行之，其子羔乎！</span><a href="#11.18" class="lyref">11.18</a> <a href="#11.25" class="lyref">11.25</a> </p>
 <p>
-<a id="zigong"></a><span class="lycharname">子贡</span>，<span class="lycharname">赐</span>：端木赐，字子贡，少孔子31岁，卫国人，<a href="#11.3">孔门十哲</a>之一。《仲尼弟子列传》说，<span class="lyq">子贡利口巧辞，孔子常黜其辩。</span>（黜：贬抑。）他有杰出的外交才干，<span class="lyq">子贡一出，存鲁、乱齐、破吴、强晋而霸越。子贡一使，使势相破，十年之中，五国各有变。</span>他有卓越的经商本领，善于观察行情低买高卖，家累千金，是同门中的首富。他是孔子最亲密的弟子之一，老师病重时他赶来探望，孔子问：&ldquo;<span class="lyq">赐，汝来何其晚也？</span>&rdquo;孔子去世后，他是丧礼的主持人，众弟子服丧3年，唯有他筑庐冢边，守丧6年。<a href="#19.21" class="lyref">19.21</a>  至 <a href="#19.25" class="lyref">19.25</a>  反映了子贡对老师的拳拳仰慕之心。</p>
+<a id="zigong"></a><span class="lycharname">子贡</span>，<span class="lycharname">赐</span>：端木赐，字子贡，少孔子31岁，卫国人，<a href="#11.3">孔门十哲</a>之一。他机敏善言，《仲尼弟子列传》说，<span class="lyq">子贡利口巧辞，孔子常黜其辩。</span>（黜：贬抑。）他有杰出的外交才干，<span class="lyq">子贡一出，存鲁、乱齐、破吴、强晋而霸越。子贡一使，使势相破，十年之中，五国各有变。</span>他有卓越的经商本领，善于观察行情低买高卖，家累千金，是同门中的首富。他是孔子最亲密的弟子之一，老师病重时他赶来探望，孔子问：&ldquo;<span class="lyq">赐，汝来何其晚也？</span>&rdquo;孔子去世后，他是丧礼的主持人，众弟子服丧3年，唯有他筑庐冢边，守丧6年。<a href="#19.21" class="lyref">19.21</a>  至 <a href="#19.25" class="lyref">19.25</a>  反映了子贡对老师的拳拳仰慕之心。</p>
 <p>司马迁特别偏爱子贡，《仲尼弟子列传》用了近1/3篇幅描写他游说齐、吴、越、晋之间，使鲁国免遭战乱的功绩。《货殖列传》评价：<span class="lyq">夫使孔子名布扬于天下者，子贡先后之也。此所谓得势而益彰者乎？</span><a href="#1.10" class="lyref">1.10</a> <a href="#1.15" class="lyref">1.15</a> <a href="#2.13" class="lyref">2.13</a> <a href="#3.17" class="lyref">3.17</a> <a href="#5.4" class="lyref">5.4</a> <a href="#5.9" class="lyref">5.9</a> <a href="#5.12" class="lyref">5.12</a> <a href="#5.13" class="lyref">5.13</a> <a href="#5.15" class="lyref">5.15</a> <a href="#6.8" class="lyref">6.8</a> <a href="#6.30" class="lyref">6.30</a> <a href="#7.15" class="lyref">7.15</a> <a href="#9.6" class="lyref">9.6</a> <a href="#9.13" class="lyref">9.13</a> <a href="#11.3" class="lyref">11.3</a> <a href="#11.13" class="lyref">11.13</a> <a href="#11.16" class="lyref">11.16</a> <a href="#11.19" class="lyref">11.19</a> <a href="#12.7" class="lyref">12.7</a> <a href="#12.8" class="lyref">12.8</a> <a href="#12.23" class="lyref">12.23</a> <a href="#13.20" class="lyref">13.20</a> <a href="#13.24" class="lyref">13.24</a> <a href="#14.17" class="lyref">14.17</a> <a href="#14.28" class="lyref">14.28</a> <a href="#14.29" class="lyref">14.29</a> <a href="#14.35" class="lyref">14.35</a> <a href="#15.3" class="lyref">15.3</a> <a href="#15.10" class="lyref">15.10</a> <a href="#15.24" class="lyref">15.24</a> <a href="#17.19" class="lyref">17.19</a> <a href="#17.24" class="lyref">17.24</a> <a href="#19.20" class="lyref">19.20</a> <a href="#19.21" class="lyref">19.21</a> <a href="#19.22" class="lyref">19.22</a> <a href="#19.23" class="lyref">19.23</a> <a href="#19.24" class="lyref">19.24</a> <a href="#19.25" class="lyref">19.25</a> </p>
 <p>
 <a id="zijian"></a><span class="lycharname">子贱</span>：宓（<span class="lypinyin">m&igrave;</span>，旧读<span class="lypinyin">f&uacute;</span>）不齐，字子贱，少孔子30岁，鲁国人，曾任<a id="shanfu"></a>鲁国单父（<span class="lypinyin">sh&agrave;n fǔ</span>，也作亶父，今山东省菏泽市单县）邑宰。据《吕氏春秋&middot;审应览&middot;具备》，上任之初，他通过隐喻巧妙地获得了鲁君的信任，使单父大治，流传下&ldquo;掣肘&rdquo;的典故。《说苑&middot;政理》载，孔子问他何以<span class="lyq">治单父而众说</span>，子贱说自己爱民：<span class="lyq">父其父，子其子，<a href="#xu4c">恤</a>诸孤而哀丧纪</span>，孔子认为是小节：<span class="lyq">小民附矣，犹未足也</span>；子贱说自己待人谦恭推诚，孔子认为是中节；子贱说访求到5位能于自己的贤人协理政务，孔子赞叹：<span class="lyq">欲其大者，乃于此在矣。昔者<a href="#yao">尧</a>、<a href="#shun">舜</a>清微其身，以听观天下，务来贤人。夫举贤者，百福之宗也，而神明之主也。不齐之所治者小也，不齐所治者大，其与尧、舜继矣。</span>《史记&middot;滑稽列传》末尾评论：<span class="lyq"><a href="#zichan">子产</a>治郑，民不能欺；子贱治单父，民不忍欺；西门豹治邺，民不敢欺。三子之才能谁最贤哉？辨治者当能别之。</span>（<a id="ximenbao"></a>西门豹：战国初期魏国邺县（在今河北省邯郸市临漳县西南）县令，破除陋习，引水灌田，<span class="lyq">名闻天下，泽流后世</span>。）据《颜氏家训&middot;书证》，今文《<a href="#shangshu">尚书</a>》的传人秦博士伏生，就是子贱的后人。 <a href="#5.3" class="lyref">5.3</a> </p>
